# SPECLOOP

./: .gitignore  .gitmodules  DESIGN.md  POSTMORTEM.md  README.md  pyproject.toml  requirements.lock.txt  specloop.toml
docs/planning/: plan-chatgpt.md  plan-claude.md
research/: specloop_vector_idea.md
scripts/: record_demo.sh  setup.sh
src/specloop/: cli.py  config.py
src/specloop/classify/: module_type.py
src/specloop/compose/: assertions.py  axis_pipeline.py  compatibility.py  decomposer.py  e2e.py  interaction_assertions.py  pipeline.py  planner.py  protocol_templates.py  retrieval.py  schema.py  (+1 more)
tests/: test_improvements.py  test_planner.py  test_retrieval.py
tests/fixtures/: counter.sv  fifo_sync.sv  fsm_traffic.sv  top_compose.sv
vendor_blackboxes/: intel_stratix.sv  xilinx_7series.sv
work/: axis_adapter.bind.sv  axis_adapter.ir.json  axis_cobs_decode.bind.sv  axis_cobs_decode.ir.json  axis_cobs_encode.bind.sv  axis_cobs_encode.ir.json  axis_demux.bind.sv  axis_demux.ir.json  axis_fifo.bind.sv  axis_fifo.ir.json  axis_frame_join.bind.sv  axis_frame_join.ir.json  axis_frame_length_adjust.bind.sv  axis_frame_length_adjust.ir.json  axis_mux.bind.sv  axis_mux.ir.json  axis_pipeline_register.bind.sv  axis_pipeline_register.ir.json  axis_rate_limit.bind.sv  axis_rate_limit.ir.json  axis_register.bind.sv  axis_register.ir.json  axis_srl_fifo.bind.sv  axis_srl_fifo.ir.json  axis_srl_register.bind.sv  axis_srl_register.ir.json  counter.bind.sv  ibex_alu.ir.json
work/recheck_axis/: DISCARD_LIST.md  analyze.py  finalize.py  harness.py  sound_results.json
(+29 files in other folders)
